--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "request": "^2.88.2",
+    "requests": "^0.3.0",
     "validator": "^13.1.1"
   }
 }
