--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
+    "connect-mongo": "^3.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "finnhub": "^1.2.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -32,6 +35,7 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "request": "^2.88.2",
     "requests": "^0.3.0",
     "validator": "^13.1.1"
